log enchanced